tests/paczka1/fuzzy1/21276282.err
Error in line 1: Qw3lv S387 38,0
Error in line 4: 8kKdM S387 40,0
Error in line 3: Qw3lv A460 95,3
Error in line 23: 8kKdM S387 97,4
Error in line 22: eTHcyz S387 20,6
Error in line 28: 8kKdM S633 81,2
